--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,11 @@ border: none;
 body{
   background-color:#f3f3f3;
 }
+.container{
+  width:1100px;
+  margin-top:20px;
+  margin-right:auto;
+  margin-left:auto;
+  border:1px dashed #d3d3d3;
+  border-radius:4px;
+}
