--- a/css/style.css
+++ b/css/style.css
@@ -16,5 +16,10 @@ body{
   background-color:#f3f3f3;
   border:1px dashed #d3d3d3;
   border-radius:4px;
+}
+.first-paragraph{
+  text-indent:22px;
+}
+.header{
   text-align:center;
 }
