--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ body{
   margin-top:20px;
   margin-right:auto;
   margin-left:auto;
+  padding:10px;
   background-color:#f3f3f3;
-  border:1px dashed #d3d3d3;
   border-radius:4px;
 }
 .first-paragraph{
