--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,11 @@ p{
   height:200px;
   width:300px;
 }
+body {
+  background: url('/img/circle-theory.jpg') no-repeat center center fixed;
+  background-position: top;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
